kubeflow-components/crud-web-apps/jupyter/manifests/overlays/openshift/oauth-proxy/service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: jupyter-web-app-tls
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: oauth-proxy
      port: 443
      protocol: TCP
      targetPort: oauth-proxy
