kubeflow-components/crud-web-apps/jupyter/manifests/overlays/openshift/oauth-proxy/route-patch.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jupyter
spec:
  port:
    targetPort: oauth-proxy
  tls:
    termination: Reencrypt
